<resources>
    <string name="app_name">OnlineShop</string>
    <string name="home_page_actionbar_title">Trade by <font color='#4E55D7'>bata</font></string>
    <string name="profile_menu_item">Profile menu item</string>
    <string name="fragment4_menu_item">fragment4 menu item</string>
    <string name="fragment3_menu_item">fragment3 menu item</string>
    <string name="fragment2_menu_item">fragment2 menu item</string>
    <string name="home_menu_item">Home menu item</string>
    <string name="register_title_text">Sign in</string>
    <string name="edittext_first_name_hint">First name</string>
    <string name="edittext_last_name_hint">Last name</string>
    <string name="edittext_email_hint">Email</string>
    <string name="button_create_acc_hint">Sign in</string>
    <string name="have_acc_info_text">Already have an account?</string>
    <string name="have_acc_link_text">Log in</string>
    <string name="sign_in_with_google_text">Sign in with Google</string>
    <string name="sign_in_with_apple_text">Sign in with Apple</string>
    <string name="login_title_text">Welcome back</string>
    <string name="edittext_password_hint">Password</string>
    <string name="button_login_hint">Login</string>
    <string name="change_photo_title">Change photo</string>
    <string name="base_profile_button_tradestory_text">TradeStory</string>
    <string name="base_profile_button_payment_text">Payment method</string>
    <string name="base_profile_button_balance_text">Balance</string>
    <string name="base_profile_button_history_text">Trade history</string>
    <string name="base_profile_button_restore_text">Restore Purchase</string>
    <string name="base_profile_button_help_text">Help</string>
    <string name="base_profile_button_logout_text">logout</string>
    <string name="balance_value">$ 1593</string>
    <string name="item_price_base_text">Item price</string>
    <string name="item_name_base_text">Item name</string>
    <string name="brand_name_base_text">Brand name</string>
    <string name="sale_value_base_text">Sale value</string>
    <string name="view_all_base_text">View all</string>
    <string name="latest_base_text">Latest</string>
    <string name="flash_sale_base_text">Flash Sale</string>
    <string name="brands_base_text">Brands</string>
    <string name="profile_name_base_text">Satria Adhi Pradana</string>
    <string name="btn_upload_item_text">Upload item</string>
    <string name="searchview_hint_text">What are you looking for?</string>
    <string name="category_name_base_text">Headphones</string>
    <string name="add_to_cart_button_layout_text">ADD TO CART</string>
    <string name="end_price_text">0</string>
    <string name="quantity_text">Quantity:  </string>
    <string name="picked_item_name_base_text">New balance Sneakers</string>
    <string name="dollar_text">$</string>
    <string name="picked_item_text">22,50</string>
    <string name="picked_item_description_base_text">Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked</string>
    <string name="rating_text">3.9</string>
    <string name="views_text">(4000 reviews)</string>
    <string name="color_title_text">Color:</string>
    <string name="location_text">Location</string>
    <string name="profile_actionbar_title_text">Profile</string>
    <string name="search_response_item_text">response</string>
    <string name="balance_value_text">$ 1593</string>
    <string name="quantity_value_default_text">0</string>
</resources>