<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.registration.RegistrationFragment">

    <TextView
        android:id="@+id/tvRegisterTitle"
        style="@style/TextViewTitles"
        android:text="@string/register_title_text"
        app:layout_constraintBottom_toTopOf="@+id/registerGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/registerGroup"
        android:layout_width="@dimen/width_register_group"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signWithGoogleGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle">

        <EditText
            android:id="@+id/etFirstName"
            style="@style/EditTextAuthGroup"
            android:height="@dimen/edittext_auth_height"
            android:background="@drawable/edit_text_auth_modifier"
            android:hint="@string/edittext_first_name_hint" />

        <TextView
            android:id="@+id/tvFirstNameErrorMessage"
            style="@style/TextViewAuthGroupErrors"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/EditTextAuthGroup"
            android:layout_marginTop="@dimen/auth_group_edittext_margin_top"
            android:background="@drawable/edit_text_auth_modifier"
            android:hint="@string/edittext_last_name_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvLastNameErrorMessage"
            style="@style/TextViewAuthGroupErrors"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextAuthGroup"
            android:layout_marginTop="@dimen/auth_group_edittext_margin_top"
            android:background="@drawable/edit_text_auth_modifier"
            android:hint="@string/edittext_email_hint" />

        <TextView
            android:id="@+id/tvEmailErrorMessage"
            style="@style/TextViewAuthGroupErrors"
            android:visibility="gone" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_group_edittext_margin_top"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_auth_modifier"
                android:hint="@string/edittext_password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswordErrorMessage"
            style="@style/TextViewAuthGroupErrors"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCreateAccount"
            style="@style/ButtonsBase"
            android:layout_marginTop="@dimen/auth_group_edittext_margin_top"
            android:background="@drawable/buttons_base_modifier"
            android:text="@string/button_create_acc_hint"
            android:textAllCaps="false" />

        <LinearLayout
            android:id="@+id/haveAccGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/have_acc_group_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHaveAccInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_m"
                android:text="@string/have_acc_info_text" />

            <TextView
                android:id="@+id/tvHaveAccLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_m"
                android:text="@string/have_acc_link_text"
                android:textColor="@color/have_acc_link_color" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signWithGoogleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/signWithAppleGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerGroup">

        <ImageView
            android:id="@+id/ivGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_48" />

        <TextView
            android:id="@+id/tvRegisterWithGoogle"
            style="@style/TextViewSignInWith"
            android:layout_gravity="center"
            android:autoLink="all"
            android:text="@string/sign_in_with_google_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signWithAppleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signWithGoogleGroup">

        <ImageView
            android:id="@+id/ivApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_apple_48" />

        <TextView
            android:id="@+id/tvRegisterWithApple"
            style="@style/TextViewSignInWith"
            android:layout_gravity="center"
            android:autoLink="all"
            android:text="@string/sign_in_with_apple_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>