<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchBar"
            android:layout_marginTop="@dimen/home_margins_10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:theme="@style/SearchViewHome"
            app:iconifiedByDefault="false"
            android:background="@drawable/searchview_modifier"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/searchview_hint_text"
            app:searchHintIcon="@color/black"
            app:layout_constraintBottom_toTopOf="@id/rwCategories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rwCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:listitem="@layout/category_recyclerview_item"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            android:layout_marginTop="@dimen/home_margins_10"
            app:layout_constraintBottom_toTopOf="@id/tvLatest"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvLatest"
            style="@style/TextViewHomeTitlesText"
            android:layout_marginTop="@dimen/home_margins_10"
            android:layout_marginStart="@dimen/home_margins_10"
            android:text="@string/latest_base_text"
            app:layout_constraintBottom_toTopOf="@id/rwLatest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rwCategories" />

        <TextView
            android:id="@+id/tvLatestViewAll"
            style="@style/TextViewHomeHelpText"
            android:layout_marginTop="@dimen/home_margins_10"
            android:layout_marginEnd="@dimen/home_margins_15"
            android:text="@string/view_all_base_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rwCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rwLatest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:listitem="@layout/latest_recyclerview_item"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tvFlashSale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLatest" />

        <TextView
            android:id="@+id/tvFlashSale"
            style="@style/TextViewHomeTitlesText"
            android:layout_marginTop="@dimen/home_margins_10"
            android:layout_marginStart="@dimen/home_margins_10"
            android:text="@string/flash_sale_base_text"
            app:layout_constraintBottom_toTopOf="@id/rwFlashSale"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rwLatest" />

        <TextView
            android:id="@+id/tvFlashSaleViewAll"
            style="@style/TextViewHomeHelpText"
            android:layout_marginTop="@dimen/home_margins_10"
            android:layout_marginEnd="@dimen/home_margins_15"
            android:text="@string/view_all_base_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rwLatest" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rwFlashSale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tvBrands"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFlashSale"
            tools:listitem="@layout/sale_recyclerview_item" />

        <TextView
            android:id="@+id/tvBrands"
            style="@style/TextViewHomeTitlesText"
            android:layout_marginTop="@dimen/home_margins_10"
            android:layout_marginStart="@dimen/home_margins_10"
            android:text="@string/brands_base_text"
            app:layout_constraintBottom_toTopOf="@id/rwBrands"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rwFlashSale" />

        <TextView
            android:id="@+id/tvBrandsViewAll"
            style="@style/TextViewHomeHelpText"
            android:layout_marginTop="@dimen/home_margins_10"
            android:layout_marginEnd="@dimen/home_margins_15"
            android:text="@string/view_all_base_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rwFlashSale" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rwBrands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:listitem="@layout/brands_recyclerview_item"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            app:layout_constraintTop_toBottomOf="@+id/tvBrands"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>